<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/koolcolor_white" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp" >

            <Button
                android:id="@+id/btn_check_update_self"
                style="@style/HomePageBtnStyle"
                android:text="@string/str_check_update_self" />

            <Button
                android:id="@+id/btn_check_update_pos"
                style="@style/HomePageBtnStyle"
                android:text="@string/str_check_update_pos" />

            <Button
                android:id="@+id/btn_check_update_engine"
                style="@style/HomePageBtnStyle"
                android:text="@string/str_check_update_engine" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>