<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <TextView
        android:id="@+id/aidl_tv_trans_detai_title"
        style="@style/TvStyle_20Sp.White"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/kool_black"
        android:gravity="center"
        android:paddingLeft="8dp"
        android:text="@string/trans_detail" />

    <Button
        android:id="@+id/aidl_btn_trans_detail_back"
        android:layout_width="48dp"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@drawable/bg_aidl_backward" />
    <Button
        android:id="@+id/aidl_btn_trans_detail_void"
        android:layout_width="wrap_content"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_alignParentRight="true"
        android:background="@drawable/bg_aidl_btn_transparent_gray"
        android:text="@string/sale_void"
        android:textColor="@color/kool_blue"
        android:textSize="20sp" />

    <Button
        android:id="@+id/aidl_btn_trans_detail_reprint"
        style="@style/HomePageBtnStyle"
        android:layout_alignParentBottom="true"
        android:text="@string/aidl_reprint_sheet" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/aidl_btn_trans_detail_reprint"
        android:layout_below="@id/aidl_tv_trans_detai_title"
        android:padding="8dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/aidl_img_trans_detail_state"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:scaleType="centerInside" />

            <TextView
                android:id="@+id/aidl_tv_detail_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:padding="4dp"
                android:textColor="@color/kool_green_light"
                android:textSize="14sp" />

            <RelativeLayout style="@style/RlItemInDetail" >

                <TextView
                    android:id="@+id/aidl_tv_detail_amount_label"
                    style="@style/TvLabelInDetail"
                    android:text="@string/trans_info_amount" />

                <TextView
                    android:id="@+id/aidl_tv_detail_amount_value"
                    style="@style/TvValueInDetail"
                    android:textColor="@color/kool_red_light"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout style="@style/RlItemInDetail" >

                <TextView
                    android:id="@+id/aidl_tv_detail_payment_label"
                    style="@style/TvLabelInDetail"
                    android:text="@string/trans_info_payment_type" />

                <TextView
                    android:id="@+id/aidl_tv_detail_payment_value"
                    style="@style/TvValueInDetail"
                    android:paddingLeft="0dp" />

                <ImageView
                    android:id="@+id/aidl_img_detail_payment_icon"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@id/aidl_tv_detail_payment_value"
                    android:scaleType="centerInside" />
            </RelativeLayout>

            <RelativeLayout style="@style/RlItemInDetail" >

                <TextView
                    android:id="@+id/aidl_tv_detail_order_no_label"
                    style="@style/TvLabelInDetail"
                    android:text="@string/trans_info_ordNo" />

                <TextView
                    android:id="@+id/aidl_tv_detail_order_no_value"
                    style="@style/TvValueInDetail" />
            </RelativeLayout>

            <RelativeLayout style="@style/RlItemInDetail" >

                <TextView
                    android:id="@+id/aidl_tv_detail_ref_no_label"
                    style="@style/TvLabelInDetail"
                    android:text="@string/trans_info_refNo" />

                <TextView
                    android:id="@+id/aidl_tv_detail_ref_no_value"
                    style="@style/TvValueInDetail" />
            </RelativeLayout>

            <RelativeLayout style="@style/RlItemInDetail" >

                <TextView
                    android:id="@+id/aidl_tv_detail_operator_label"
                    style="@style/TvLabelInDetail"
                    android:text="@string/trans_info_operator" />

                <TextView
                    android:id="@+id/aidl_tv_detail_operator_value"
                    style="@style/TvValueInDetail" />
            </RelativeLayout>

            <RelativeLayout style="@style/RlItemInDetail" >

                <TextView
                    android:id="@+id/aidl_tv_detail_time_label"
                    style="@style/TvLabelInDetail"
                    android:text="@string/trans_info_time" />

                <TextView
                    android:id="@+id/aidl_tv_detail_time_value"
                    style="@style/TvValueInDetail" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>