<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/koolcolor_white"
    tools:context="com.koolpos.mobiledevdemo.MainActivity" >

    <TextView
        android:id="@+id/tvMainTitle"
        style="@style/TvTitleStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_240_72dp"
        android:gravity="center"
        android:text="@string/app_name" />

    <!-- Button
        android:id="@+id/exitApp"
        style="@android:attr/buttonBarButtonStyle"
        android:layout_width="50dp"
        android:layout_height="32dp"
        android:layout_margin="8dp"
        android:background="@color/koolcolor_blue_dark"
        android:gravity="center"
        android:text="@string/exit"
        android:textColor="@color/koolcolor_white" /-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tvMainTitle" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp" >

            <Button
                android:id="@+id/btnCallSmartPos"
                style="@style/HomePageBtnStyle"
                android:text="@string/call_smartpos" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btnCallSmartPosAidl"
                    style="@style/HomePageBtnStyle"
                    android:text="@string/call_smartpos_aidl" />

                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_below="@id/btnCallSmartPosAidl"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp" >

                    <RadioButton
                        android:id="@+id/radio1"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="创建登录界面"
                        android:textColor="@color/koolcolor_gray" />

                    <RadioButton
                        android:id="@+id/radio2"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="调用系统登录界面"
                        android:textColor="@color/koolcolor_gray" />
                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@color/koolcolor_blue_light" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_alignBottom="@id/radio_group"
                    android:layout_alignParentLeft="true"
                    android:layout_alignTop="@id/btnCallSmartPosAidl"
                    android:layout_marginLeft="8dp"
                    android:background="@color/koolcolor_blue_light" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="100dp"
                    android:layout_alignBottom="@id/radio_group"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@id/btnCallSmartPosAidl"
                    android:layout_marginRight="8dp"
                    android:background="@color/koolcolor_blue_light" />
            </RelativeLayout>

            <Button
                android:id="@+id/btnCallMemberCard"
                style="@style/HomePageBtnStyle"
                android:text="@string/call_membercard_aidl" />

            <Button
                android:id="@+id/btnScanQrCode"
                style="@style/HomePageBtnStyle"
                android:text="@string/scan_qrcode" />

            <Button
                android:id="@+id/btnCallPrinter"
                style="@style/HomePageBtnStyle"
                android:text="@string/call_printer" />

            <Button
                android:id="@+id/btnCheckUpdate"
                style="@style/HomePageBtnStyle"
                android:text="@string/check_update" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>